# narpisa-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.json  turbo.json
.cursor/rules/: backend-fastapi.mdc  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/backend/: Dockerfile  README.md  package.json  pyproject.toml
apps/backend/app/: celery_main.py  main.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py  exceptions.py  routes.py  task_auth.py
apps/backend/app/data/: models.py  routes.py  services.py
apps/backend/app/data/database_admin/: models.py  routes.py  services.py
apps/backend/app/data/namibiamme/: tasks.py
apps/backend/app/data/pdf/: models.py  routes.py  services.py  tasks.py
apps/backend/app/models/: document.py
apps/backend/app/services/: document_queue.py  job_processor.py  job_repository.py  job_store.py  pdf_parser.py  processing_service.py  source_fetcher.py  task_queue.py
apps/backend/app/worker/: celery_app.py  tasks.py
apps/backend/scripts/: Output-by-Chamber-Members-1990-2023(Output by Mine).csv  import_chamber_output_csv.py  site-map.example.json
apps/backend/tests/: conftest.py  test_document_queue.py  test_health.py  test_job_processor.py  test_process_source.py  test_queue_source.py  test_source_fetcher.py  test_worker_tasks.py
docs/: cloud-project-setup.md  source-governance.md  team-onboarding.md
scripts/: generate-africa-map.ts  run-backend-python.mjs
supabase/: config.toml  seed.sql
(+97 files in other folders)
